Big overhaul. Most packages are there, settings missing

--- a/development.yaml
+++ b/development.yaml
@@ -1,14 +1,16 @@
 iso_install:
-  arch_iso:
-    ansible_host: 192.168.122.21
-    ansible_user: root
-    ansible_ssh_pass: root
-    install_drive: /dev/vda
+  hosts:
+    arch_iso:
+      ansible_host: 192.168.122.21
+      ansible_user: root
+      ansible_ssh_pass: root
+      install_drive: /dev/vda
 
 common:
-  arch_vm:
-    ansible_host: 192.168.122.22
-    hostname: "ArchVM-Test"
-  wsl:
-    ansible_host: 172.25.55.150
-    hostname: "WSL-Fraise"
+  hosts:
+    arch_vm:
+      ansible_host: 192.168.122.22
+      hostname: "ArchVM-Test"
+    wsl:
+      ansible_host: 172.25.55.150
+      hostname: "WSL-Fraise"
