--- a/roles/common/tasks/07-syncthing.yaml
+++ b/roles/common/tasks/07-syncthing.yaml
@@ -5,6 +5,7 @@
       # - syncthingtray issue with tray
     state: present
 
+# does only generate a new id when needed
 - name: generate device id
   command: syncthing -generate=/home/{{ user.name }}/.config/syncthing/
   changed_when: false
@@ -25,15 +26,15 @@
 - name: enable systemd service syncthing
   systemd:
     name: syncthing@{{ user.name }}
-    state: started
+    state: restarted
     enabled: yes
   become: true
 
-- name: symlink all directories to the home directory
-  shell: '{{ item }}'
-  args:
-    warn: false
-  loop:
-    - 'ln -sf /home/{{ user.name}}/.dotfiles/.* /home/{{ user.name }}'
-    - 'ln -sf /home/{{ user.name}}/.dotfiles/.config/* /home/{{ user.name}}/.config'
-  ignore_errors: yes
+# - name: symlink all directories to the home directory
+#   shell: '{{ item }}'
+#   args:
+#     warn: false
+#   loop:
+#     - 'ln -sf /home/{{ user.name}}/.dotfiles/.* /home/{{ user.name }}'
+#     - 'ln -sf /home/{{ user.name}}/.dotfiles/.config/* /home/{{ user.name}}/.config'
+#   ignore_errors: yes
