--- a/common.yaml
+++ b/common.yaml
@@ -3,7 +3,7 @@
   become: true
   tasks:
     - name: install python 3 if needed
-      raw: test -e /usr/bin/python || (pacman -S python --noconfirm)
+      raw: test -e /usr/bin/python || (pacman -Sy python --noconfirm)
       changed_when: false
   tags: always
 
