--- a/roles/common/tasks/04-terminal.yaml
+++ b/roles/common/tasks/04-terminal.yaml
@@ -7,6 +7,7 @@
       - bridge-utils # for libvirt & gns3
       - cups # printing services
       - docker
+      - docker-compose
       - dmidecode # bios info
       - dnsmasq # needed for libvirt natting
       - iptables-nft # needed for libvirt natting
