replace ntpd for systemd-timesync

--- a/roles/common/tasks/01-system.yml
+++ b/roles/common/tasks/01-system.yml
@@ -27,7 +27,7 @@
     state: started
     enabled: yes
   loop:
-    - ntpd
+    - systemd-timesyncd
     - sshd
     - NetworkManager
   become: true
